Style hero, reset spacing and correct fonts

--- a/assets/styles/1-design-tokens/_variables--color.scss
+++ b/assets/styles/1-design-tokens/_variables--color.scss
@@ -1,7 +1,7 @@
 /* Create the CSS Variables for White, Black, and Grays */
 :root {
     --white:         rgb(255,255,255);//#ffffff    // black ratio 17.92    // white ratio ----
-    --color-white:         255,255,255;
+    --color-white:         rgb(255,255,255);
     --color-gray-light-80: rgb(230,230,230);//#e6e6e6    // black ratio 14.36    // white ratio 1.24
     --color-gray-light-60: rgb(204,204,204);//#cccccc    // black ratio 11.16    // white ratio 1.6
     --color-gray-light-40: rgb(179,179,179);//#b3b3b3    // black ratio 8.55     // white ratio 2.09
