--- a/assets/styles/6-components/_card.scss
+++ b/assets/styles/6-components/_card.scss
@@ -1,6 +1,6 @@
 /* Card One */
 .card {
-    max-width: 300px;
+    max-width: 360px;
     margin: var(--space-stack-medium);
     background-color: var(--color-white);
     color: var(--color-gray-dark-60);
@@ -20,7 +20,6 @@
 
         .card__title {
             margin: var(--space-stack-medium);
-            text-align: center;
         }
 
         .card__description {
@@ -42,11 +41,11 @@
         max-width: 360px;
         width: 100%;
 
-        border-radius: var(--space-x-small);
+        border-radius: var(--space-small);
         box-shadow:  0px 5px 22px rgba(0, 0, 0, 0.12), 0px 12px 17px rgba(0, 0, 0, 0.14), 0px 7px 8px rgba(0, 0, 0, 0.2);
 
         .card__copy {
-            padding: var(--space-3x-large) var(--space-2x-large);
+            padding: var(--space-6x-large) var(--space-4x-large);
 
             @media (min-width: $ipad-landscape) {
                 padding: var(--space-2x-large) var(--space-x-large);
@@ -59,15 +58,22 @@
         .card__headline {
             color: $main-purple;
             text-transform: uppercase;
+            margin: var(--space-stack-medium);
         }
 
         .card__subheadline {
             font-style: italic;
             text-align: left;
+            margin: var(--space-stack-medium);
+            text-transform: none;
         }
 
         .card__description {
             margin: var(--space-stack-large);
+
+            p {
+                line-height: var(--line-height-large);
+            }
 
             @media (min-width: $ipad-landscape) {
                 margin: var(--space-stack-medium);
@@ -77,6 +83,10 @@
         .card__button {
             display: flex;
             justify-content: center;
+        }
+
+        button {
+            max-width: 300px;
         }
     }
 
